# yazpp

./: .cvsignore  .gitignore  .travis.yml  ChangeLog  Doxyfile.in  IDMETA  LICENSE  Makefile.am  NEWS  README  README.md  README.txt  TODO  aclocal.m4  buildconf.sh  configure  configure.ac  configure.in  yaz++-config.in  yaz.m4  yazpp-config.in  yazpp.m4  yazpp.pc.in  yazpp.spec  yazpp.spec.in
.github/workflows/: build-yazpp.yaml
debian/: .gitignore  changelog  control  libyaz++-dev.install  libyaz++1.install  libyazpp-dev.install  libyazpp1-dev.install  libyazpp3-dev.install  libyazpp3.install  libyazpp4-dev.install  libyazpp6-dev.install  libyazpp7-dev.install  postinst  rules  yaz++.install  yaz++1-doc.install  yazpp-doc.install  yazpp1-doc.install
doc/: .cvsignore  .gitignore  Doxyfile  Makefile.am  api.xml  book.xml  entities.ent  installation.xml  introduction.xml  license.xml  local.ent.in  proxy.xml  yaz++.xml.in  yaz-proxy-man.sgml  yaz-proxy-ref.xml  yazhtml.dsl.in  yazphp.dsl.in  yazpp-config-man.xml  yazpp.xml  yazpp.xml.in  yazprint.dsl.in  zoom.xml
etc/: MARC21slim2DC.xsl  MARC21slim2MODS3.xsl  MARC21slim2SRWDC.xsl  Makefile.am  config.xml  pqf.properties  voyager.xml  yaz-proxy-ka.sh  yaz-proxy.sh
include/: Makefile.am  Makefile.in  yaz-ir-assoc.h  yaz-pdu-assoc.h  yaz-pdu-observer.h  yaz-proxy.h  yaz-query.h  yaz-socket-manager.h  yaz-socket-observer.h  yaz-z-assoc.h  yaz-z-query.h  yaz-z-server.h
include/yaz++/: Makefile.am  Makefile.in  cql2rpn.h  gdu.h  gduqueue.h  ir-assoc.h  pdu-assoc.h  pdu-observer.h  proxy.h  query.h  record-cache.h  socket-manager.h  socket-observer.h  yaz-ir-assoc.h  yaz-pdu-assoc.h  yaz-pdu-observer.h  yaz-proxy.h  yaz-query.h  yaz-socket-manager.h  yaz-socket-observer.h  yaz-z-assoc.h  yaz-z-databases.h  yaz-z-query.h  yaz-z-server.h  z-assoc.h  z-databases.h  z-query.h  z-server.h
include/yaz++/proxy/: bw.h  proxy.h
include/yazpp/: Makefile.am  bw.h  cql2rpn.h  gdu.h  gduqueue.h  ir-assoc.h  limit-connect.h  pdu-assoc.h  pdu-observer.h  query.h  record-cache.h  socket-manager.h  socket-observer.h  timestat.h  z-assoc.h  z-databases.h  z-query.h  z-server.h
lib/: .gitignore  Makefile.am
proxy/: Makefile.am  yaz-bw.cpp  yaz-proxy-config.cpp  yaz-proxy-main.cpp  yaz-proxy.cpp
src/: .cvsignore  .gitignore  Makefile.am  Makefile.in  bw.cpp  config.xml  gdu.cpp  gduqueue.cpp  limit-connect.cpp  pdu-observer.cpp  proxy.sh  query.cpp  socket-observer.cpp  test_gdu.cpp  test_query.cpp  timestat.cpp  tstquery.cpp  ursula.asn  ursula.tcl  voyager.xml  yaz-bw.cpp  yaz-client.cpp  yaz-cql2rpn.cpp  yaz-ir-assoc.cpp  yaz-marc-sample.cpp  yaz-my-client.cpp  yaz-my-server.cpp  yaz-pdu-assoc-thread.cpp  yaz-pdu-assoc.cpp  yaz-proxy-config.cpp  yaz-proxy-main.cpp  yaz-proxy.cpp  yaz-proxy.sh  yaz-server.cpp  yaz-socket-manager.cpp  yaz-z-assoc.cpp  yaz-z-cache.cpp  yaz-z-databases.cpp  yaz-z-query.cpp  yaz-z-server-ill.cpp  (+5 more)
unix/: Makefile.in  configure  configure.in
win/: .gitignore  makefile  yazxx.dsw
win/yazclient/: yazclient.dsp
win/yazproxy/: yazproxy.dsp
win/yazserver/: yazserver.dsp
win/yazxx/: yazxx.dsp
win/zoomxxclient/: zoomxxclient.dsp
zlint/: .gitignore  Makefile.am  main.cpp  test-init-01.cpp  test-init-02.cpp  test-init-03.cpp  test-init-04.cpp  test-init-05.cpp  test-init-06.cpp  test-init-07.cpp  test-init-08.cpp  test-scan-01.cpp  test-search-01.cpp  zlint.cpp  zlint.h
zoom/: .cvsignore  .gitignore  Changes  Makefile  Makefile.am  README  canonical.cpp  master-header  zclient.cpp  zconn.cpp  zerr.cpp  zexcept.cpp  zquery.cpp  zrec.cpp  zrs.cpp
