dnl YAZ++ Toolkit configure script.
dnl (c) Index Data ApS 1999
dnl See the file LICENSE for details.
dnl $Id: configure.in,v 1.4 2000-07-04 13:48:49 adam Exp $
AC_INIT(../include/yaz-socket-manager.h)
dnl
dnl ------ Checking programs
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_CXXCPP
AC_PROG_INSTALL
AC_PROG_RANLIB
dnl
dnl ------ Look for Yaz
dnl See if user specified location of yaz-config; otherwise
dnl use ../yaz if is a directory (internal development); otherwise
dnl use yaz-config found in PATH.
AC_SUBST(YAZINC)
AC_SUBST(YAZLIB)
yazconfig=NONE
yazpath=NONE
AC_ARG_WITH(yazconfig, [  --with-yazconfig=DIR      yaz-config in DIR (example /home/yaz-1.6)], [yazpath=$withval])
if test "x$yazpath" != "xNONE"; then
	yazconfig=$yazpath/yaz-config
else
	for i in ../../yaz* ../../yaz; do
		if test -d $i; then
			if test -r $i/yaz-config; then
				yazconfig=$i/yaz-config
			fi
		fi
	done
	if test "x$yazconfig" = "xNONE"; then
		AC_PATH_PROG(yazconfig, yaz-config, NONE)
        fi
fi
AC_MSG_CHECKING(for YAZ)
if test -r $yazconfig; then
	. $yazconfig
	AC_MSG_RESULT($yazconfig)
else
	AC_MSG_RESULT(Not found)
fi
dnl
dnl ------ Makefiles
AC_OUTPUT(Makefile ../src/Makefile)
